--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
     "@mui/styled-engine-sc": "^6.0.0-alpha.6",
+    "@sweetalert2/theme-material-ui": "^5.0.15",
     "aos": "^2.3.4",
     "firebase": "^10.6.0",
     "localforage": "^1.10.0",
@@ -23,9 +24,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.20.0",
+    "reactjs-popup": "^2.0.6",
     "sort-by": "^1.2.0",
-    "styled-components": "^6.1.1"
+    "styled-components": "^6.1.1",
+    "sweetalert2": "^6.11.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
