--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.6",
     "@sweetalert2/theme-material-ui": "^5.0.15",
     "aos": "^2.3.4",
+    "axios": "^1.6.2",
     "firebase": "^10.6.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
