--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.20.0",
+    "react-select": "^5.8.0",
     "reactjs-popup": "^2.0.6",
     "sort-by": "^1.2.0",
     "styled-components": "^6.1.1",
