--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@mui/material": "^5.14.18",
     "@mui/styled-engine-sc": "^6.0.0-alpha.6",
     "@mui/system": "^5.14.18",
+    "@stripe/react-stripe-js": "^2.4.0",
+    "@stripe/stripe-js": "^2.2.0",
     "@sweetalert2/theme-material-ui": "^5.0.15",
     "@tanstack/react-query": "^5.8.7",
     "aos": "^2.3.4",
