--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "match-sorter": "^6.3.1",
     "prop-types": "^15.5.7",
     "react": "^18.2.0",
+    "react-awesome-slider": "^4.1.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
