--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-router-dom": "^6.20.0",
     "react-select": "^5.8.0",
     "reactjs-popup": "^2.0.6",
+    "recharts": "^2.10.2",
     "sort-by": "^1.2.0",
     "styled-components": "^6.1.1",
     "sweetalert2": "^6.11.5"
