--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "prop-types": "^15.5.7",
     "react": "^18.2.0",
     "react-awesome-slider": "^4.1.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
+    "react-intersection-observer": "^9.10.2",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.20.0",
     "react-select": "^5.8.0",
@@ -40,7 +42,8 @@
     "recharts": "^2.10.2",
     "sort-by": "^1.2.0",
     "styled-components": "^6.1.1",
-    "sweetalert2": "^6.11.5"
+    "sweetalert2": "^6.11.5",
+    "swiper": "^11.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
