--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emailjs/browser": "^3.11.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fontsource/work-sans": "^5.0.18",
     "@mui/icons-material": "^5.14.18",
     "@mui/joy": "^5.0.0-beta.36",
     "@mui/material": "^5.14.18",
